kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: secure-devsecops-service

spec:
  type: ClusterIP

  selector:
    app: secure-devsecops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
