kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: secure-devsecops-ingress

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: devsecops.example.com

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: secure-devsecops-service

                port:
                  number: 80
